Ajout images + fonts + modification css/html

--- a/startbootstrap-freelancer-gh-pages/index.html
+++ b/startbootstrap-freelancer-gh-pages/index.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Rhizome</a>
+      <img src="img/tableau.png" height="80px"width="100px">
       <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -62,12 +62,9 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead bg-primary text-white text-center">
-    <div class="container">
-      <img class="img-fluid mb-5 d-block mx-auto" src="img/" alt="">
-      <h1 class="text-uppercase mb-0">L'escape game dans l'atelier de Courbet</h1>
-    </div>
-  </header>
+  <section class="portfolio">
+      <img class="img-fluid mb-5 d-block mx-auto" src="img/salle_esquisse.jpg" alt="">
+  </section>
 
   <!-- Portfolio Grid Section -->
   <section class="portfolio" id="leJeu">
@@ -75,6 +72,7 @@
       <h2 class="text-center text-uppercase text-secondary mb-0">Le Jeu</h2>
       <h3 class="text-center text-uppercase text-secondary mb-0">Escape Game La réponse est dans le tableau</h3>
       <p class="lead">Venez vous immerger dans l'époque de Courbet et dans l'atelier même du peintre. Avec votre astuce on dévoilera le mystère qui entoure cette pièce, apparemment un meurtre s'est produit, la femme nu n'est plus dans l'atelier de Courbet ! Qui l'a tué ? Pourquoi ? Que veut dire ce crime ? Vivez cette aventure et découvrez en plus sur l'art réaliste.</p>
+      <img class="img-fluid mb-5 d-block mx-auto" src="img/maps.png" alt="">
 
   </section>
 
