Add image flagey and few changes

--- a/startbootstrap-freelancer-gh-pages/index.html
+++ b/startbootstrap-freelancer-gh-pages/index.html
@@ -105,7 +105,8 @@
       <h2 class="text-center text-uppercase mb-3 darkFont">Le Lieu</h2>
       <p class="darkFont">L'escape game se déroule dans l'ancienne propriété de la famille paternelle de Gustave
         Courbet:
-        la ferme de Flagey. C'est l'opportunité pour les joueurs de connaître aussi un endroit de la vie de Courbet</p>
+        la ferme de Flagey. C'est l'opportunité pour les joueurs de connaître aussi un endroit de la vie de Courbet.</p>
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/flagey.jpg" alt="">
     </div>
   </section>
 
@@ -113,16 +114,16 @@
   <!-- Portfolio Grid Section -->
   <section class="portfolio" id="horaires">
     <div class="container">
-      <h3 class="text-center text-uppercase text-secondary mb-3">Horaires sur réservation</h3>
-      <p class="lead">Lundi - Vendredi 12h-18h</p>
-      <p class="lead">Samedi 10h - 18h</p>
-      <p class="lead">Dimanche 12h-16h</p>
-      <div class="text-center mt-4">
+      <h3 class="text-center text-uppercase text-secondary mb-3">Horaires</h3>
+<!--       <div class="col-lg-2 ml-auto">
+ -->    <p class="text-center lead">Du 9 Août 2019 au 11 Août 2019</p>
+        <p class="text-center lead">Gratuit au public !</p>
+<!--       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="#">
           <i class="fas fa-download mr-2"></i>
           Réserver
         </a>
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -142,7 +143,7 @@
   </section>
 
   <!-- About Section -->
-  <section class="portfolio" id="about">
+  <!-- <section class="portfolio" id="about">
     <div class="container">
       <h2 class="text-center text-uppercase lead mb-3">A propos de nous</h2>
       <div class="row">
@@ -157,7 +158,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact Section -->
   <section id="contact">
