--- a/startbootstrap-freelancer-gh-pages/index.html
+++ b/startbootstrap-freelancer-gh-pages/index.html
@@ -88,8 +88,7 @@
 <!-- Portfolio Grid Section -->
 <section class="portfolio" id="leJeu">
   <div class="container">
-    <h1 class="text-center text-uppercase text-secondary mb-3">Le Jeu</h1>
-    <h3 class="text-center text-uppercase text-secondary mb-3">La réponse est dans le tableau</h3>
+    <h2 class="text-center text-uppercase text-secondary mb-3">Le Jeu</h2>
     <p class="lead">
       L’expérience que nous vous proposons de vivre n’est autre qu’un Escape Game. Un jeu grandeur nature dans lequel vous
       serez piégé et dont le but sera de vous en échapper. Pour cela, vous ne disposerez que d’une heure, de vos neurones et ceux de vos coéquipiers.
@@ -111,20 +110,17 @@
       du Campus des portes du Jura à Montbéliard. Réunissez votre meilleur équipe d’enquêteurs et réservez dès à présent
       votre session de jeu sur notre site web. Trouvez le meurtrier et sortez de l’atelier le plus vite possible ou le voyage sera à sens unique...
     </p>
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1RINdL3YcpfZVD5L9LrwfWdI-3fQSgDfa" width="1080" height="480"></iframe>    </div>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10dvxRrrYE0zQ_F7aC71Ts4uDRdUoaz4S" width="1080" height="480"></iframe>
   </div>
 </section>
-
 
 <!-- Portfolio Grid Section -->
 <section class="portfolio" id="horaires">
   <div class="container">
-    <h3 class="text-center text-uppercase text-secondary mb-3">Horaires & Tarifs</h3>
-    <h1 class="lead"> Horaires sur réservation </h1>
+    <h2 class="text-center text-uppercase text-secondary mb-3">Horaires</h2>
+    <p class="lead"> Horaires sur réservation </p>
     <p class="lead">
-      Du mardi au vendredi de 14h à 21h<br>
-
-      Samedi et dimanche de 14h à 22h
+      Du lundi au vendredi de 13H à 19H<br>
     </p>
 
     <p class="lead">
@@ -134,13 +130,6 @@
 
       A bientôt dans l'atelier du peintre !
       <button class="btn btn-primary btn-xl" onclick="location.href='https://www.supersaas.fr/schedule/lareponseestdansletableau/Escape_Game'"> Réserver</button>
-    </p>
-
-    <p class="lead">
-      Tarifs
-    </p>
-    <p class="lead">
-      8€/personnes
     </p>
   </div>
 </section>
@@ -168,28 +157,12 @@
       <div class="col-lg-8 mx-auto">
         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
         <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-        <form name="sentMessage" id="contactForm" novalidate="novalidate">
-          <div class="control-group">
-            <div class="form-group floating-label-form-group controls mb-0 pb-2">
-              <label>Nom</label>
-              <input class="form-control" id="name" type="text" placeholder="Nom" required="required"
-                     data-validation-required-message="Please enter your name.">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
+        <form method="post" action="mail.php">
           <div class="control-group">
             <div class="form-group floating-label-form-group controls mb-0 pb-2">
               <label>Adresse email</label>
               <input class="form-control" id="email" type="email" placeholder="Adresse email" required="required"
                      data-validation-required-message="Please enter your email address.">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="control-group">
-            <div class="form-group floating-label-form-group controls mb-0 pb-2">
-              <label>Numéro de téléphone</label>
-              <input class="form-control" id="phone" type="tel" placeholder="Numéro de téléphone" required="required"
-                     data-validation-required-message="Please enter your phone number.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -219,35 +192,15 @@
       <div class="col-md-4 mb-5 mb-lg-0">
         <h4 class="text-uppercase mb-4">Localisation</h4>
         <p class="lead mb-0">
-          Batiment CDDP<br>4 Place Tharradin
+          Batiment Mémo<br>4 Place Tharradin
           <br>25200, Montbéliard</p>
       </div>
       <div class="col-md-4 mb-5 mb-lg-0">
         <h4 class="text-uppercase mb-4">Réseaux sociaux</h4>
         <ul class="list-inline mb-0">
           <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/La-R%C3%A9ponse-est-dans-Le-Tableau-2378294115784482/?ref=bookmarks">
               <i class="fab fa-fw fa-facebook-f"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fab fa-fw fa-google-plus-g"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fab fa-fw fa-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fab fa-fw fa-linkedin-in"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fab fa-fw fa-dribbble"></i>
             </a>
           </li>
         </ul>
