--- a/startbootstrap-freelancer-gh-pages/index.html
+++ b/startbootstrap-freelancer-gh-pages/index.html
@@ -30,6 +30,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/freelancer.css" rel="stylesheet">
+  <link rel="stylesheet" href="scss/_portfolio.scss">
 
 </head>
 
@@ -117,18 +118,15 @@
 <!-- Portfolio Grid Section -->
 <section class="portfolio" id="horaires">
   <div class="container">
-    <h2 class="text-center text-uppercase text-secondary mb-3">Horaires</h2>
+    <h2 class="text-center text-uppercase text-secondary mb-3">Horaires & tarifs</h2>
     <p class="lead"> Horaires sur réservation </p>
     <p class="lead">
-      Du lundi au vendredi de 13H à 19H<br>
+      Du lundi 10 Juin au vendredi 21 Juin de 10H à 18H (week end non compris)<br>
     </p>
 
     <p class="lead">
-      Réservation
-
       Pour réserver une session d'Escape Game, cliquez sur le lien ci-dessous.
-
-      A bientôt dans l'atelier du peintre !
+      <br>
       <button class="btn btn-primary btn-xl" onclick="location.href='https://www.supersaas.fr/schedule/lareponseestdansletableau/Escape_Game'"> Réserver</button>
     </p>
   </div>
@@ -157,11 +155,11 @@
       <div class="col-lg-8 mx-auto">
         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
         <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-        <form method="post" action="mail.php">
+        <form method="post" action="php/mail.php">
           <div class="control-group">
             <div class="form-group floating-label-form-group controls mb-0 pb-2">
               <label>Adresse email</label>
-              <input class="form-control" id="email" type="email" placeholder="Adresse email" required="required"
+              <input name="email" class="form-control" id="email" type="email" placeholder="Adresse email" required="required"
                      data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
@@ -169,7 +167,7 @@
           <div class="control-group">
             <div class="form-group floating-label-form-group controls mb-0 pb-2">
               <label>Message</label>
-              <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required"
+              <textarea name="message" class="form-control" id="message" rows="5" placeholder="Message" required="required"
                         data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
@@ -177,7 +175,7 @@
           <br>
           <div id="success"></div>
           <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Envoyer</button>
+            <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton" name="envoi">Envoyer</button>
           </div>
         </form>
       </div>
@@ -250,3 +248,5 @@
 </body>
 
 </html>
+
+
