--- a/startbootstrap-freelancer-gh-pages/index.html
+++ b/startbootstrap-freelancer-gh-pages/index.html
@@ -98,6 +98,7 @@
       Plongez dans une aventure inoubliable et intemporelle à travers ce voyage dans le temps. Vous serez transporté au plus près de l’artiste, au coeur
       de ses créations afin d’élucider un dernier mystère. Qui a tué cette femme ? Pourquoi ? A vous de le découvrir…
     </p>
+    <video class="center_video" src="video/trailer.mp4" width="800px" height="450px" controls="controls"></video>
   </div>
 </section>
 
